--- a/back/ecommerce-BaptistaJose/.env.development
+++ b/back/ecommerce-BaptistaJose/.env.development
@@ -1,8 +1,9 @@
-    DB_NAME= proyecto_m4
-    DB_HOST= localhost
-    DB_PORT= 5432
-    DB_USERNAME= postgres
-    DB_PASSWORD= cafebap456
-    CLOUDINARY_CLOUD_NAME= ditvxwaqx
-    CLOUDINARY_API_KEY= 167351135281662
-    CLOUDINARY_API_SECRET= YW9C6hR0WD0KlfFujlOXS2CKWNg
+    DB_NAME=proyecto_m4
+    DB_HOST=localhost
+    DB_PORT=5432
+    DB_USERNAME=postgres
+    DB_PASSWORD=cafebap456
+    CLOUDINARY_CLOUD_NAME=ditvxwaqx
+    CLOUDINARY_API_KEY=167351135281662
+    CLOUDINARY_API_SECRET=YW9C6hR0WD0KlfFujlOXS2CKWNg
+    JWT_SECRET=123456789
