--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,8 @@ jobs:
       name: Build and push
       uses: docker/build-push-action@v5
       with:
-        context: .
-        file: ./Dockerfile
+        context: ./back/ecommerce-BaptistaJose
+        file: ./back/ecommerce-BaptistaJose/Dockerfile
         push: true
         tags: BaptistaJose/nestjs-ecommerce
   
