--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,29 +2,30 @@ name: deploy
 
 on:
   push:
-    branches: 
+    branches:
       - "main"
+
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps: 
-    -
-      name: Chekout
-      uses: actions/chekout@v4
-    -
-      name: Login to Docker hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{secrets.DORCKERHUB_USERNAME}}
-        password: ${{secrets.DORCKERHUB_TOKEN}}
-    -
-      name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-    -
-      name: Build and push
-      uses: docker/build-push/action@v5
-      with: 
-        context: .
-        file: ./Dockerfile
-        push: true
-        tags: ${{secrets.DORCKERHUB_USERNAME}}/nestjs-ecommerce:latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/nestjs-ecommerce:latest
